--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ build/
 # Cache files
 .cache/
 .next/
+.vercel/
 
 # Dependency directories for different package managers
 .bun/
@@ -27,6 +28,8 @@ build/
 .DS_Store
 Thumbs.db
 
+# Vercel local config
+.vercel
 
 # Editor specific files
 .vscode/*
